--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,7 @@ website:
   repo-url: https://github.com/ynscientist/ynscientist.github.io # TODO change to website repo
   #favicon: TODO
   open-graph: true
+  margin-header: subscribe.html
   search:
     location: navbar
     type: textbox
